minor bug fix to give tiles height on firefox

--- a/app/styles/views/RLOTileView.scss
+++ b/app/styles/views/RLOTileView.scss
@@ -30,7 +30,7 @@ $tile-margin: 0.5rem;
 
 // RLO TILE ********************************************************************
 .rlo-tile {
-    height: 0;
+    //height: 0;
     position: relative;
     margin-top: $tile-margin;
     margin-left: $tile-margin;
